--- a/Frontend-Angular-Balance-Tn/src/styles.css
+++ b/Frontend-Angular-Balance-Tn/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~font-awesome/css/font-awesome.min.css";
+@import "~angular-notifier/styles";
+body{
+    color: #212529 !important;
+}
